--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.TFC_DAM_TICKETS"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".VentanaPrincipal"
+            android:exported="false" />
+        <activity
+            android:name=".NewAccount"
+            android:exported="false" />
+        <activity
+            android:name=".autenticacion.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
