--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,10 +15,12 @@
         android:theme="@style/Theme.TFC_DAM_TICKETS"
         tools:targetApi="31" >
         <activity
+            android:name=".ActivityNuevoTicket"
+            android:exported="false" />
+        <activity
             android:name=".TicketsList"
             android:exported="false" />
         <activity
-
             android:name=".ActivityCategorias"
             android:exported="false" />
         <activity
