--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         tools:targetApi="31" >
         <activity
             android:name=".ActivityDetalleTicket"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar"/>
         <activity
             android:name=".ActivityNuevoTicket"
             android:exported="false"
