--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/iconlogo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
+        android:roundIcon="@drawable/iconlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.TFC_DAM_TICKETS"
         tools:targetApi="31" >
@@ -33,7 +33,8 @@
         <activity
             android:name=".autenticacion.Login"
             android:exported="true"
-            android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" >
+            android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
