--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -16,7 +16,13 @@
         android:theme="@style/Theme.TFC_DAM_TICKETS"
         tools:targetApi="31">
         <activity
-            android:name=".persistence.ForgotPassword"
+            android:name=".SetNewPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EnterRecCodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPasswordActivity"
             android:exported="false" />
         <activity
             android:name=".ActivityDetalleTicket"
