--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,16 @@
         tools:targetApi="31">
         <activity
             android:name=".SetNewPasswordActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar"/>
         <activity
             android:name=".EnterRecCodeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar"/>
         <activity
             android:name=".ForgotPasswordActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar"/>
         <activity
             android:name=".ActivityDetalleTicket"
             android:exported="false"
