--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,38 +17,47 @@
         tools:targetApi="31">
         <activity
             android:name=".ActivityDetalleUsuario"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".SetNewPasswordActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".EnterRecCodeActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".ForgotPasswordActivity"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".ActivityDetalleTicket"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".ActivityNuevoTicket"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".TicketsList"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".ActivityCategorias"
+            android:screenOrientation="portrait"
             android:exported="false"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar" />
         <activity
             android:name=".autenticacion.Login"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/Theme.TFC_DAM_TICKETS.NoActionBar"
             android:windowSoftInputMode="adjustPan">
